examples/istio/canary/service.yml
apiVersion: v1
kind: Service
metadata:
  name: canary
  labels:
    app: canary
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: canary
