examples/istio/canary/virtual_service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary
spec:
  hosts:
    - mostela.com
  http:
    - route:
        - destination:
            host: canary
            subset: v1
          weight: 60
        - destination:
            host: canary
            subset: v2
          weight: 38
        - destination:
            host: canary
            subset: v3
          weight: 2
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: canary
spec:
  host: mostela.com
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
    - name: v3
      labels:
        version: v3
